--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,7 @@ android {
 
 dependencies {
 
-    def navigationVersion = '2.5.3'
     def koinVersion = '3.4.2'
-
     def retrofitVersion = '2.9.0'
     def roomVersion = '2.5.1'
 
@@ -55,7 +53,9 @@ dependencies {
 
     // Koin
     implementation "io.insert-koin:koin-android:${ koinVersion }"
+    implementation "io.insert-koin:koin-androidx-compose:$koinVersion"
 
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
     // Room
     implementation "androidx.room:room-runtime:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
@@ -66,8 +66,20 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:1.14.0"
     implementation "com.squareup.retrofit2:converter-moshi:${ retrofitVersion }"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3"
+    implementation 'com.google.android.gms:play-services-location:17.0.0' // Agrega esta dependencia
 
-    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+
+    // Coil
+    implementation "io.coil-kt:coil-compose:2.4.0"
+
+    // Live Data compose
+    implementation "androidx.compose.runtime:runtime-livedata:1.4.3"
+
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
